Fix uneven project meta placement

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -434,7 +434,7 @@ table td {
   border-radius: 1rem;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
-  height: 250px;
+  min-height: 290px;
   object-fit: cover;
 }
 
@@ -453,7 +453,8 @@ table td {
   padding: 0 1rem 0.5rem 1rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  height: 100%!important;
 }
 
 .m-0 {
